style file add.

--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>test</title>
+    <link rel="stylesheet" href="static/css/styles.css">
   </head>
   <body>
     Hello World
 
   </body>
-  <script src="/script.js"></script>
+  <script src="static/js/script.js"></script>
 </html>
