--- a/index.html
+++ b/index.html
@@ -1,13 +1,30 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>test</title>
-    <link rel="stylesheet" href="static/css/styles.css">
-  </head>
-  <body>
-    Hello World
-
-  </body>
+<head>
+  <meta charset="utf-8">
+  <title>Senna - my first blazing fast website</title>
+  <link rel="stylesheet" href="static/css/styles.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/senna.js/2.1.5/senna.css">
+</head>
+<body>
+  <a href="/pages/page1.html">Page 1</a>
+  <a data-senna-off="true" href="/pages/page2.html">Page 2</a>
+  <!-- Content surface -->
+  <div id="content">
+    Default content of my website.
+    <form id="loginForm" data-senna-off>
+      <input name="username">
+      <input name="password">
+      <button type="submit">
+    </form>
+    <form id="feedbackForm">
+      <input name="content">
+      <button type="submit">
+    </form>
+  </div>
+  <!-- End of content surface -->
+  <!-- <script src="https://cdn.rawgit.com/visionmedia/page.js/master/page.js"></script> -->
+  <script src="https://cdn.jsdelivr.net/senna.js/2.1.5/senna-min.js"></script>
   <script src="static/js/script.js"></script>
+</body>
 </html>
