--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@
   <!-- End of content surface -->
   <!-- <script src="https://cdn.rawgit.com/visionmedia/page.js/master/page.js"></script> -->
   <script src="https://cdn.jsdelivr.net/senna.js/2.1.5/senna-min.js"></script>
-  <script src="static/js/script.js"></script>
+  <!-- <script src="static/js/script.js"></script> -->
 </body>
 </html>
