--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="static/css/styles.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/senna.js/2.1.5/senna.css">
 </head>
-<body>
+<body data-senna data-senna-surface>
   <a href="/page1.html">Page 1</a>
   <a data-senna-off="true" href="/page2.html">Page 2</a>
   <!-- Content surface -->
@@ -25,6 +25,6 @@
   <!-- End of content surface -->
   <!-- <script src="https://cdn.rawgit.com/visionmedia/page.js/master/page.js"></script> -->
   <script src="https://cdn.jsdelivr.net/senna.js/2.1.5/senna-min.js"></script>
-  <!-- <script src="static/js/script.js"></script> -->
+  <script src="static/js/script.js"></script>
 </body>
 </html>
