--- a/page2.html
+++ b/page2.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="static/css/styles.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/senna.js/2.1.5/senna.css">
 </head>
-<body>
+<body data-senna data-senna-surface>
   <a href="/page1.html">Page 1</a>
   <a data-senna-off="true" href="/page2.html">Page 2</a>
   <!-- Content surface -->
