--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
       <h3>{{message}}</h3>
     </script>
 
-    <a href="#/">Home</a>
-    <a href="#/blog">Blog</a>
-    <a href="#/about">About</a>
+    <a href="/">Home</a>
+    <a href="/blog">Blog</a>
+    <a href="/about">About</a>
 
     <div ng-view></div>
 
