--- a/index.html
+++ b/index.html
@@ -1,26 +1,14 @@
 <!doctype html>
 <html ng-app="myApp">
   <head>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.5/angular.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.5/angular-route.min.js"></script>
+    <script src=""></script>
+    <script src=""></script>
   </head>
   <body>
-    <script type="text/ng-template" id="pages/home.html">
-      <h1>Home</h1>
-      <h3>{{message}}</h3>
-    </script>
-    <script type="text/ng-template" id="pages/blog.html">
-      <h1>Blog</h1>
-      <h3>{{message}}</h3>
-    </script>
-    <script type="text/ng-template" id="pages/about.html">
-      <h1>About</h1>
-      <h3>{{message}}</h3>
-    </script>
 
-    <a href="/">Home</a>
+    <!-- <a href="/">Home</a>
     <a href="/blog">Blog</a>
-    <a href="/about">About</a>
+    <a href="/about">About</a> -->
 
     <div ng-view></div>
 
