--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <title>Static Surface</title>
-  <link rel="shortcut icon" href="http://sennajs.com/images/favicon.ico">
+  <link rel="shortcut icon" href="">
 
   <!-- Including Senna -->
-  <script src="https://cdn.jsdelivr.net/senna.js/2.1.5/senna-min.js"></script>
+  <script src="../build/globals/senna-debug.js"></script>
 </head>
 <body>
   <div id="header">
