body teag added.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <!-- Including Senna -->
   <script src="../vender/globals/senna-debug.js"></script>
 </head>
-<body>
+<body data-senna>
   <div id="header">
       Header default <a href="foo.html">Foo</a><br>
       Header default <a href="bar.html">Bar</a>
