--- a/foo.html
+++ b/foo.html
@@ -8,7 +8,7 @@
   <!-- Including Senna -->
   <script src="../vender/globals/senna-debug.js"></script>
 </head>
-<body>
+<body data-senna>
   <div id="header">
     Header foo <a href="foo.html">Foo</a><br>
     Header foo <a href="bar.html">Bar</a>
