--- a/bar.html
+++ b/bar.html
@@ -22,7 +22,7 @@
     'use strict';
     var app = new senna.App();
     app.setBasePath('/');
-    app.addSurfaces(['header', 'content']);
+    app.addSurfaces(['header', 'content', 'footer']);
     app.addRoutes([
       {
         path: '/index.html',
