--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     'use strict';
     var app = new senna.App();
     app.setBasePath('/');
-    app.addSurfaces(['header', 'content', 'footer']);
+    app.addSurfaces(['header', 'content']);
     app.addRoutes([
      {
         path: '/index.html',
