--- a/bar.html
+++ b/bar.html
@@ -11,10 +11,14 @@
 <body data-senna>
   <div id="header">
     Header bar <a href="foo.html">Foo</a><br>
-    Header bar <a href="bar.html">Bar</a>
+    Header bar <a href="bar.html">Bar</a><br>
+    Header bar <a href="index.html">Index</a>
   </div>
   <div id="content">
-     Content bar <a href="index.html">Index</a>
+    This is "bar"
+  </div>
+  <div id="footer">
+    Static content: this part will not change if navigating to a page without this surface. [BAR]
   </div>
 
   <!-- Initializing Senna -->
@@ -22,7 +26,7 @@
     'use strict';
     var app = new senna.App();
     app.setBasePath('/');
-    app.addSurfaces(['header', 'content']);
+    app.addSurfaces(['header', 'footer']);
     app.addRoutes([
       {
         path: '/index.html',
