--- a/foo.html
+++ b/foo.html
@@ -11,10 +11,11 @@
 <body data-senna>
   <div id="header">
     Header foo <a href="foo.html">Foo</a><br>
-    Header foo <a href="bar.html">Bar</a>
+    Header foo <a href="bar.html">Bar</a><br>
+    Header foo <a href="index.html">Index</a>
   </div>
   <div id="content">
-     Content foo <a href="index.html">Index</a>
+     Content "foo"
   </div>
   <div id="footer">
     Static content: this part will not change if navigating to a page without this surface. [FOO]
@@ -25,7 +26,7 @@
     'use strict';
     var app = new senna.App();
     app.setBasePath('/');
-    app.addSurfaces(['header', 'content']);
+    app.addSurfaces(['header', 'footer']);
     app.addRoutes([
       {
         path: '/index.html',
