--- a/bar.html
+++ b/bar.html
@@ -26,7 +26,7 @@
     'use strict';
     var app = new senna.App();
     app.setBasePath('/');
-    app.addSurfaces(['header', 'footer']);
+    // app.addSurfaces(['header', 'footer']);
     app.addRoutes([
       {
         path: '/index.html',
