--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <!-- Including Senna -->
   <script src="../vender/globals/senna-debug.js"></script>
 </head>
-<body data-senna>
-  <div id="header">
+<body>
+  <div data-senna id="header">
     Header index <a href="foo.html">Foo</a><br>
     Header index <a href="bar.html">Bar</a><br>
     Header index <a href="index.html">Index</a>
@@ -17,7 +17,7 @@
   <div id="content">
     Content "index"
   </div>
-  <div id="footer">
+  <div data-senna id="footer">
     Static content: this part will not change if navigating to a page without this surface. [INDEX]
   </div>
 
