--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <script src="../vender/globals/senna-debug.js"></script>
 </head>
 <body>
-  <div data-senna id="header">
+  <div data-senna data-senna-surface id="header">
     Header index <a href="foo.html">Foo</a><br>
     Header index <a href="bar.html">Bar</a><br>
     Header index <a href="index.html">Index</a>
@@ -17,7 +17,7 @@
   <div id="content">
     Content "index"
   </div>
-  <div data-senna id="footer">
+  <div data-senna data-senna-surface id="footer">
     Static content: this part will not change if navigating to a page without this surface. [INDEX]
   </div>
 
