--- a/bar.html
+++ b/bar.html
@@ -8,8 +8,8 @@
   <!-- Including Senna -->
   <script src="../vender/globals/senna-debug.js"></script>
 </head>
-<body>
-  <div data-senna data-senna-surface id="header">
+<body data-senna>
+  <div data-senna-surface id="header">
     Header bar <a href="foo.html">Foo</a><br>
     Header bar <a href="bar.html">Bar</a><br>
     Header bar <a href="index.html">Index</a>
@@ -17,7 +17,7 @@
   <div id="content">
     This is "bar"
   </div>
-  <div data-senna data-senna-surface id="footer">
+  <div data-senna-surface id="footer">
     Static content: this part will not change if navigating to a page without this surface. [BAR]
   </div>
 
@@ -26,7 +26,6 @@
     'use strict';
     var app = new senna.App();
     app.setBasePath('/');
-    app.addSurfaces(['header', 'footer']);
     app.addRoutes([
       {
         path: '/index.html',
