--- a/foo.html
+++ b/foo.html
@@ -8,8 +8,8 @@
   <!-- Including Senna -->
   <script src="../vender/globals/senna-debug.js"></script>
 </head>
-<body>
-  <div data-senna data-senna-surface id="header">
+<body data-senna>
+  <div data-senna-surface id="header">
     Header foo <a href="foo.html">Foo</a><br>
     Header foo <a href="bar.html">Bar</a><br>
     Header foo <a href="index.html">Index</a>
@@ -17,7 +17,7 @@
   <div id="content">
     Content "foo"
   </div>
-  <div data-senna data-senna-surface id="footer">
+  <div data-senna-surface id="footer">
     Static content: this part will not change if navigating to a page without this surface. [FOO]
   </div>
 
