--- a/bar.html
+++ b/bar.html
@@ -14,10 +14,10 @@
     Header bar <a href="bar.html">Bar</a><br>
     Header bar <a href="index.html">Index</a>
   </div>
-  <div id="content">
+  <div data-senna-surface id="content">
     This is "bar"
   </div>
-  <div data-senna-surface id="footer">
+  <div id="footer">
     Static content: this part will not change if navigating to a page without this surface. [BAR]
   </div>
 
