--- a/foo.html
+++ b/foo.html
@@ -14,10 +14,10 @@
     Header foo <a href="bar.html">Bar</a><br>
     Header foo <a href="index.html">Index</a>
   </div>
-  <div id="content">
+  <div data-senna-surface id="content">
     Content "foo"
   </div>
-  <div data-senna-surface id="footer">
+  <div id="footer">
     Static content: this part will not change if navigating to a page without this surface. [FOO]
   </div>
 
