--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     Header index <a href="bar.html">Bar</a><br>
     Header index <a href="index.html">Index</a>
   </div>
-  <div id="content">
+  <div data-senna-surface id="content">
     Content "index"
   </div>
-  <div data-senna-surface id="footer">
+  <div id="footer">
     Static content: this part will not change if navigating to a page without this surface. [INDEX]
   </div>
 
