--- a/bar.html
+++ b/bar.html
@@ -9,7 +9,7 @@
   <script src="../vender/globals/senna-debug.js"></script>
 </head>
 <body data-senna>
-  <div data-senna-surface id="header">
+  <div id="header">
     Header bar <a href="foo.html">Foo</a><br>
     Header bar <a href="bar.html">Bar</a><br>
     Header bar <a href="index.html">Index</a>
