--- a/bar.html
+++ b/bar.html
@@ -1,27 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Static Surface</title>
-  <link rel="shortcut icon" href="">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" type="image/x-icon" href="/vendor/freefavicon/favicon.ico">
 
-  <!-- Including Senna -->
-  <script src="../vender/globals/senna-debug.js"></script>
-</head>
-<body data-senna>
-  <div id="header">
-    Header bar <a href="foo.html">Foo</a><br>
-    Header bar <a href="bar.html">Bar</a><br>
-    Header bar <a href="index.html">Index</a>
-  </div>
-  <div data-senna-surface id="content">
-    This is "bar"
-  </div>
-  <div id="footer">
-    Static content: this part will not change if navigating to a page without this surface. [BAR]
-  </div>
+    <title>Robin DeCook</title>
 
-  <!-- Initializing Senna -->
-  <script scr="/static/js/script.js"></script>
-</body>
+    <!-- Bootstrap core CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+
+
+    <!-- Custom styles for this template -->
+    <link href="/static/css/cover.css" rel="stylesheet">
+
+  </head>
+
+  <body data-senna>
+
+    <div class="site-wrapper">
+
+      <div class="site-wrapper-inner">
+
+        <div class="cover-container">
+
+          <div class="masthead clearfix">
+            <div class="inner">
+              <h3 class="masthead-brand">Robin DeCook</h3>
+              <nav class="nav nav-masthead">
+                <a class="nav-link active" href="/">Home</a>
+                <a class="nav-link" href="/foo.html">Foo</a>
+                <a class="nav-link" href="/bar.html">Bar</a>
+              </nav>
+            </div>
+          </div>
+
+          <div data-senna-surface id="content" class="inner cover">
+            <h1 class="cover-heading">Cover your page.</h1>
+            <p class="lead">Bar.</p>
+            <p class="lead">
+              <a href="/" class="btn btn-lg btn-secondary">Learn more</a>
+            </p>
+          </div>
+
+          <div class="mastfoot">
+            <div class="inner">
+              <p>Cover template for <a href="https://getbootstrap.com">Bootstrap</a>, by <a href="https://twitter.com/mdo">@mdo</a>.</p>
+            </div>
+          </div>
+
+        </div>
+
+      </div>
+
+    </div>
+    <!-- Including Senna -->
+    <script src="/vendor/senna/globals/senna.js"></script>
+
+    <!-- Initializing Senna -->
+    <script scr="/static/js/script.js"></script>
+
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
+
+    <!-- <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script> -->
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
+
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <script src="/vendor/bootstrap/ie10-viewport-bug-workaround.js"></script>
+  </body>
 </html>
