--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
               <h3 class="masthead-brand">Robin DeCook</h3>
               <nav class="nav nav-masthead">
                 <a class="nav-link active" href="/">Home</a>
-                <a class="nav-link" href="/foo.html">Foo</a>
-                <a class="nav-link" href="/bar.html">Bar</a>
+                <a class="nav-link" href="/services.html">Services & Rates</a>
+                <a class="nav-link" href="/contact.html">Contact</a>
               </nav>
             </div>
           </div>
