--- a/services.html
+++ b/services.html
@@ -31,15 +31,15 @@
               <h3 class="masthead-brand">Robin DeCook</h3>
               <nav class="nav nav-masthead">
                 <a class="nav-link active" href="/">Home</a>
-                <a class="nav-link" href="/foo.html">Foo</a>
-                <a class="nav-link" href="/bar.html">Bar</a>
+                <a class="nav-link" href="/services.html">Services & Rates</a>
+                <a class="nav-link" href="/contact.html">Contact</a>
               </nav>
             </div>
           </div>
 
           <div data-senna-surface id="content" class="inner cover">
             <h1 class="cover-heading">Cover your page.</h1>
-            <p class="lead">Bar.</p>
+            <p class="lead">Services</p>
             <p class="lead">
               <a href="/" class="btn btn-lg btn-secondary">Learn more</a>
             </p>
