working on nav bar

--- a/index.html
+++ b/index.html
@@ -31,7 +31,12 @@
               <h3 class="masthead-brand">Robin DeCook</h3>
               <nav class="nav nav-masthead">
                 <a class="nav-link active" href="/">Home</a>
-                <a class="nav-link" href="/services.html">Services & Rates</a>
+                <a class="nav-link dropdown-toggle" href="/services.html">Services & Rates</a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                  <a class="dropdown-item" href="#">Action</a>
+                  <a class="dropdown-item" href="#">Another action</a>
+                  <a class="dropdown-item" href="#">Something else here</a>
+                </div>
                 <a class="nav-link" href="/contact.html">Contact</a>
               </nav>
             </div>
