working on nav bar

--- a/index.html
+++ b/index.html
@@ -32,11 +32,16 @@
               <nav class="nav nav-masthead">
                 <a class="nav-link active" href="/">Home</a>
                 <a class="nav-link dropdown-toggle" href="/services.html">Services & Rates</a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                  <a class="dropdown-item" href="#">Action</a>
-                  <a class="dropdown-item" href="#">Another action</a>
-                  <a class="dropdown-item" href="#">Something else here</a>
-                </div>
+                <!-- <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Dropdown link
+                  </a>
+                  <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                    <a class="dropdown-item" href="#">Action</a>
+                    <a class="dropdown-item" href="#">Another action</a>
+                    <a class="dropdown-item" href="#">Something else here</a>
+                  </div>
+                </li> -->
                 <a class="nav-link" href="/contact.html">Contact</a>
               </nav>
             </div>
