--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
               <h3 class="masthead-brand">Robin DeCook</h3>
               <nav class="nav nav-masthead">
                 <a class="nav-link active" href="/">Home</a>
-                <a class="nav-link dropdown-toggle" href="/services.html">Services & Rates</a>
-                <!-- <li class="nav-item dropdown">
+                <a class="nav-link" href="/services.html">Services & Rates</a>
+                <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Dropdown link
                   </a>
@@ -41,7 +41,7 @@
                     <a class="dropdown-item" href="#">Another action</a>
                     <a class="dropdown-item" href="#">Something else here</a>
                   </div>
-                </li> -->
+                </li>
                 <a class="nav-link" href="/contact.html">Contact</a>
               </nav>
             </div>
@@ -66,11 +66,7 @@
       </div>
 
     </div>
-    <!-- Including Senna -->
-    <script src="/vendor/senna/globals/senna.js"></script>
 
-    <!-- Initializing Senna -->
-    <script scr="/static/js/script.js"></script>
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
@@ -84,5 +80,8 @@
 
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="/vendor/bootstrap/ie10-viewport-bug-workaround.js"></script>
+
+    <!-- my script -->
+    <script scr="/static/js/script.js"></script>
   </body>
 </html>
