working on debranding

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div class="intro-text">
           <span class="name">Robin DeCook</span>
           <hr class="star-light">
-          <span class="skills">Web Developer - Graphic Artist - User Experience Designer</span>
+          <span class="skills">Editor - Writer - Library Scientist</span>
         </div>
       </div>
     </header>
@@ -75,6 +75,7 @@
                 </div>
               </div>
               <img class="img-fluid" src="img/services/cabin.png" alt="">
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ultricies eros sed lobortis rhoncus. Nullam tortor neque, faucibus eu vehicula eget, vulputate vel lectus. In tortor dui, varius quis tortor in, maximus porta enim.</p>
             </a>
           </div>
           <div class="col-sm-4 services-item">
@@ -85,6 +86,7 @@
                 </div>
               </div>
               <img class="img-fluid" src="img/services/cake.png" alt="">
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ultricies eros sed lobortis rhoncus. Nullam tortor neque, faucibus eu vehicula eget, vulputate vel lectus. In tortor dui, varius quis tortor in, maximus porta enim.</p>
             </a>
           </div>
           <div class="col-sm-4 services-item">
@@ -95,6 +97,7 @@
                 </div>
               </div>
               <img class="img-fluid" src="img/services/circus.png" alt="">
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ultricies eros sed lobortis rhoncus. Nullam tortor neque, faucibus eu vehicula eget, vulputate vel lectus. In tortor dui, varius quis tortor in, maximus porta enim.</p>
             </a>
           </div>
         </div>
@@ -108,16 +111,10 @@
         <hr class="star-light">
         <div class="row">
           <div class="col-lg-4 ml-auto">
-            <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ultricies eros sed lobortis rhoncus. Nullam tortor neque, faucibus eu vehicula eget, vulputate vel lectus. In tortor dui, varius quis tortor in, maximus porta enim.</p>
           </div>
           <div class="col-lg-4 mr-auto">
-            <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
-          </div>
-          <div class="col-lg-8 mx-auto text-center">
-            <a href="#" class="btn btn-lg btn-outline">
-              <i class="fa fa-download"></i>
-              Download Theme
-            </a>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ultricies eros sed lobortis rhoncus. Nullam tortor neque, faucibus eu vehicula eget, vulputate vel lectus. In tortor dui, varius quis tortor in, maximus porta enim. </p>
           </div>
         </div>
       </div>
