--- a/index.html
+++ b/index.html
@@ -171,13 +171,12 @@
 
     <!-- Footer -->
     <footer class="text-center">
-      <div class="footer-above">
+      <!-- <div class="footer-above">
         <div class="container">
           <div class="row">
             <div class="footer-col col-md-4">
               <h3>Location</h3>
-              <p>3481 Melrose Place
-                <br>Beverly Hills, CA 90210</p>
+              <p>Seattle, WA</p>
             </div>
             <div class="footer-col col-md-4">
               <h3>Around the Web</h3>
@@ -216,7 +215,7 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
       <div class="footer-below">
         <div class="container">
           <div class="row">
@@ -251,25 +250,7 @@
                   <h2>Service Title</h2>
                   <hr class="star-primary">
                   <img class="img-fluid img-centered" src="img/services/cabin.png" alt="">
-                  <p>Use this area of the page to describe your project. The icon above is part of a free icon set by
-                    <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
-                  <ul class="list-inline item-details">
-                    <li>Client:
-                      <strong>
-                        <a href="http://startbootstrap.com">Start Bootstrap</a>
-                      </strong>
-                    </li>
-                    <li>Date:
-                      <strong>
-                        <a href="http://startbootstrap.com">April 2014</a>
-                      </strong>
-                    </li>
-                    <li>Service:
-                      <strong>
-                        <a href="http://startbootstrap.com">Web Development</a>
-                      </strong>
-                    </li>
-                  </ul>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ultricies eros sed lobortis rhoncus. Nullam tortor neque, faucibus eu vehicula eget, vulputate vel lectus. In tortor dui, varius quis tortor in, maximus porta enim.</p>
                   <button class="btn btn-success" type="button" data-dismiss="modal">
                     <i class="fa fa-times"></i>
                     Close</button>
@@ -295,25 +276,7 @@
                   <h2>Service Title</h2>
                   <hr class="star-primary">
                   <img class="img-fluid img-centered" src="img/services/cake.png" alt="">
-                  <p>Use this area of the page to describe your project. The icon above is part of a free icon set by
-                    <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
-                  <ul class="list-inline item-details">
-                    <li>Client:
-                      <strong>
-                        <a href="http://startbootstrap.com">Start Bootstrap</a>
-                      </strong>
-                    </li>
-                    <li>Date:
-                      <strong>
-                        <a href="http://startbootstrap.com">April 2014</a>
-                      </strong>
-                    </li>
-                    <li>Service:
-                      <strong>
-                        <a href="http://startbootstrap.com">Web Development</a>
-                      </strong>
-                    </li>
-                  </ul>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ultricies eros sed lobortis rhoncus. Nullam tortor neque, faucibus eu vehicula eget, vulputate vel lectus. In tortor dui, varius quis tortor in, maximus porta enim.</p>
                   <button class="btn btn-success" type="button" data-dismiss="modal">
                     <i class="fa fa-times"></i>
                     Close</button>
@@ -339,25 +302,7 @@
                   <h2>Service Title</h2>
                   <hr class="star-primary">
                   <img class="img-fluid img-centered" src="img/services/circus.png" alt="">
-                  <p>Use this area of the page to describe your project. The icon above is part of a free icon set by
-                    <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
-                  <ul class="list-inline item-details">
-                    <li>Client:
-                      <strong>
-                        <a href="http://startbootstrap.com">Start Bootstrap</a>
-                      </strong>
-                    </li>
-                    <li>Date:
-                      <strong>
-                        <a href="http://startbootstrap.com">April 2014</a>
-                      </strong>
-                    </li>
-                    <li>Service:
-                      <strong>
-                        <a href="http://startbootstrap.com">Web Development</a>
-                      </strong>
-                    </li>
-                  </ul>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ultricies eros sed lobortis rhoncus. Nullam tortor neque, faucibus eu vehicula eget, vulputate vel lectus. In tortor dui, varius quis tortor in, maximus porta enim.</p>
                   <button class="btn btn-success" type="button" data-dismiss="modal">
                     <i class="fa fa-times"></i>
                     Close</button>
